@startuml
'https://plantuml.com/class-diagram

abstract class OrganizationComponent{
+add():void
+remove():void
+print():void
}

class University extends OrganizationComponent

class College extends OrganizationComponent

class Department extends OrganizationComponent

College --o University

Department --o College

Client ..>OrganizationComponent
@enduml